# telegram-chat-getter

./: .env.example  .gitignore  CLAUDE.md.backup.2025-12-28T18-36-19-706Z  CLAUDE.md.backup.2025-12-29T10-44-34-957Z  CLAUDE.md.backup.2025-12-29T11-08-12-459Z  CLAUDE.md.backup.2025-12-29T12-37-13-677Z  README.md  package-lock.json  package.json  pyproject.toml
.claude/: .env.example  config.json  mcp-servers.json  teams.json
.claude-code/: config.json  settings.json
.claude/agents/: AGENT-REGISTRY.md  README.md
.claude/checklists/: COMMIT_CHECKLIST.md
.claude/commands/: code-rabbit.md  core:agent-test.md  core:context-analyze.md  lang:javascript-optimize.md  lang:nodejs-api-scaffold.md  lang:nodejs-optimize.md  lang:python-api-scaffold.md  lang:python-optimize.md  pm:blocked.md  pm:clean.md  pm:context-create.md  pm:context-prime.md  pm:context-update.md  pm:context.md  pm:epic-close.md  pm:epic-decompose.md  pm:epic-edit.md  pm:epic-list.md  pm:epic-merge.md  pm:epic-oneshot.md  pm:epic-refresh.md  pm:epic-show.md  pm:epic-split.md  pm:epic-start.md  pm:epic-status.md  pm:epic-sync-modular.md  pm:epic-sync-original.md  pm:epic-sync.md  pm:help.md  pm:import.md  pm:in-progress.md  pm:init.md  pm:issue-analyze.md  pm:issue-close.md  pm:issue-edit.md  pm:issue-reopen.md  pm:issue-show.md  pm:issue-start.md  pm:issue-status.md  pm:issue-sync.md  (+16 more)
.claude/hooks/: context7-reminder.md  docker-first-enforcement.sh  enforce-agents.js  enforce-agents.sh  pre-action-agent-reminder.js  pre-agent-context7.js  pre-command-context7.js  pre-commit-clear-reminder.sh  pre-push-docker-tests.sh  strict-enforce-agents.sh  test-hook.sh  unified-context7-enforcement.sh
.claude/mcp/: MCP-REGISTRY.md  context7.md  playwright-mcp.md  test-server.md
.claude/prds/: telegram-chat-getter.md
.claude/rules/: agent-mandatory-optimized.md  ai-integration-patterns.md  code-quality-standards.md  command-pipelines.md  context-optimization.md  context7-enforcement-optimized.md  datetime.md  development-workflow.md  frontmatter-operations.md  git-strategy.md  github-operations.md  naming-conventions.md  standard-patterns.md  tdd.enforcement.md  test-execution.md  testing-standards.md
.claude/scripts/: check-clear-reminder.sh  decompose-issue.js  docker-dev-setup.js  docker-dev-setup.sh  docker-toggle.js  (+25 more)
lib/: README-FILTER-SEARCH.md  analytics-engine.js  batch-processor-integration.js  batch-processor.js  burndown-chart.js  conflict-history.js  conflict-resolver.js  dependency-analyzer.js  filter-engine.js  query-parser.js  template-engine.js  visual-diff.js
scripts/: epic-status.sh  safe-commit.js  safe-commit.sh  setup-hooks.js  setup-hooks.sh
telegram_getter/: __init__.py  __main__.py  auth.py  chats.py  cli.py  downloader.py  exporter.py  media.py  transcriber.py  utils.py
tests/: __init__.py  test_auth.py  test_cli.py  test_downloader.py  test_exporter.py  test_list_chats.py  test_media.py  test_package.py  test_sync.py  test_transcriber.py  test_utils.py
(+125 files in other folders)
